flapivor/tests/m3/hopix/typechecker/good/22-polymorphic-record.hopix
type P <a> = { x : a; y : a }
val x : P <Int> = { x = 0; y = 1 }<Int>