flapivor/tests/m3/hopix/typechecker/bad/42-record-field-01.hopix
type T = { x : Int }

val r : T = { x = 0 }<>

val ry : Int = r.y